--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-sdl2 = "0.35.1"
+sdl2 = "0.34.0"
 stb_image = "0.2.3"
 nalgebra = "0.29.0"
 nalgebra-glm = "0.15.0"
@@ -15,6 +15,9 @@ num-traits = "0.2.14"
 specs = "0.17.0"
 gl = "0.14.0"
 time = "0.1.44"
+imgui = "0.7.0"
+imgui-opengl-renderer = "0.11.0"
+imgui-sdl2 = "0.14.0"
 
 
 [build-dependencies]
